--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "express": "^5.1.0",
     "lucide-react": "^0.544.0",
+    "ogl": "^1.0.11",
+    "postprocessing": "^6.37.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
