--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express": "^5.1.0",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
     "ogl": "^1.0.11",
     "postprocessing": "^6.37.8",
