--- a/my-app/Dockerfile
+++ b/my-app/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Build the React application
-FROM node:18-alpine AS builder
+FROM node:20-alpine AS builder
 
 # Set the working directory
 WORKDIR /app
@@ -20,7 +20,7 @@ RUN npm run build
 FROM nginx:alpine
 
 # Copy the built files from the builder stage
-COPY --from=builder /app/build /usr/share/nginx/html
+COPY --from=builder /app/dist /usr/share/nginx/html
 
 # Copy a custom Nginx configuration to handle routing
 COPY nginx.conf /etc/nginx/conf.d/default.conf
